--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,6 +4,11 @@
     <h2 class="right__contacts-title">Contacts</h2>
     <div class="right__contacts-phone">
       <div class="right__image"></div>
+      <img
+        class="right__contacts-image"
+        src="assets/icons/phone2.svg"
+        alt="phone"
+      >
       <a
         class="right__contacts-phone-link"
         href="tel:+38 093 116 27 88"
