--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -2,7 +2,7 @@
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px;
+  gap: 10px;
   width: 100%;
   height: 100%;
   background-color:#000;
@@ -11,13 +11,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 450px;
+    height: 350px;
     width: 250px;
-    border: 1px solid rgb(255, 106, 0);
+    border: 1px solid orange;
     border-radius: 10px;
     color: #eaeaea;
     background-color: #363434;
-    box-sizing: border-box;
     padding: 20px;
   }
 
@@ -25,7 +24,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color:rgb(255, 106, 0);
+    color: orange;
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 
   &__ingredients {
@@ -48,24 +49,32 @@
     outline: none;
     width: 200px;
     height: 50px;
-    border: none;
-    background: rgb(255, 106, 0);
+    border: 1px solid orange;
+    border-radius: 10px;
+    background: none;
     cursor: pointer;
+    color: orange;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
   }
 
   &__box {
-    height: 500px;
+    height: 400px;
+    gap: 10px;
   }
 }
 .image {
-  height: 200px;
-  max-width: 200px;
+  height: 150px;
+  max-width: 150px;
+  margin: 0 auto;
 }
 .box {
-  height: 150px;
+  height: 110px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 .added {
   margin-top: 20px;
@@ -75,4 +84,22 @@
   border: none;
   background: rgb(10, 102, 85);
   cursor: pointer;
+}
+
+.active {
+  margin-top: 20px;
+  outline: none;
+  width: 200px;
+  height: 50px;
+  border: none;
+  background: #000;
+  cursor: pointer;
+  color: orange;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  border: 1px solid orange;
+  font-size: medium;
+}
+
+.image-box {
+  padding: 5px;
 }
