--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -16,7 +16,7 @@
   &__input {
     width: 300px;
     height: 50px;
-    border: 1px solid rgb(255, 106, 0);
+    border: 1px solid orange;
     border-radius: 10px;
     padding-left: 15px;
     outline: none;
