--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 50px;
+  padding: 150px;
 
   &__name {
     font-size: 20px;
@@ -13,22 +13,25 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px;
 
     &-title {
       color:orange;
       font-size: 15px;
+      margin-bottom: 20px;
     }
 
     &-image {
       width: 20px;
       height: 20px;
+      fill: #fff;
+      filter: invert(1);
+      margin-right: 20px;
     }
 
     &-phone {
       display: flex;
       align-items: center;
-      gap: 20px;
+      margin-bottom: 20px;
 
       &-link {
         font-size: 12px;
