--- a/src/app/components/my-basket/my-basket.component.html
+++ b/src/app/components/my-basket/my-basket.component.html
@@ -27,7 +27,7 @@
   </div>
   <form class="my__form" action="">
       <input class="my__input" type="text" placeholder="ваше імя...">
-      <input class="my__input" type="text" placeholder="ваш мобільний">
+      <input class="my__input" type="text" placeholder="ваш мобільний...">
       <div class="form__buttons">
         <button class="my__form-button">Доставка</button>
         <button class="my__form-button">Самовивіз</button>
