add_phone_validate

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="search">
-  <p class="search__title">{{filterType === 'drink' ? 'Напої' : 'Піцца'}}</p>
+  <p class="search__title">{{filterType === 'drink' ? 'Напої' : 'Піца'}}</p>
   <input
   [(ngModel)]="search"
     class="search__input"
