--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -25,14 +25,7 @@
       <p class="basket__sum-title">Сума замовлення:</p>
       <p class="basket__sum-total">{{total$ | async}} грн</p>
     </div>
-    <form class="basket__form" action="">
-        <input class="basket__input" type="text" placeholder="ваше імя...">
-        <input class="basket__input" type="text" placeholder="ваш мобільний">
-        <div class="form__buttons">
-          <button class="basket__form-button">Доставка</button>
-          <button class="basket__form-button">Самовивіз</button>
-        </div>
-    </form>
+    <app-form></app-form>
   </div>
   <div class="items" *ngIf="(items$ | async)!.length === 0">
     <img class="items__img" src="assets/icons/basket.svg" alt="basket">
