--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -3,6 +3,8 @@
   justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 10px;
+  padding-right: 10px;
+  padding-bottom: 20px;
   width: 100%;
   height: 100%;
   background-color:#000;
@@ -47,10 +49,10 @@
   &__button {
     margin-top: 20px;
     outline: none;
-    width: 200px;
-    height: 50px;
+    width: 220px;
+    height: 30px;
     border: 1px solid orange;
-    border-radius: 10px;
+    border-radius: 7px;
     background: none;
     cursor: pointer;
     color: orange;
@@ -89,8 +91,8 @@
 .active {
   margin-top: 20px;
   outline: none;
-  width: 200px;
-  height: 50px;
+  width: 220px;
+  height: 30px;
   border: none;
   background: #000;
   cursor: pointer;
