--- a/src/app/components/my-basket/my-basket.component.html
+++ b/src/app/components/my-basket/my-basket.component.html
@@ -25,14 +25,7 @@
     <p class="my__sum-title">Сума замовлення:</p>
     <p class="my__sum-total">{{total$ | async}} грн</p>
   </div>
-  <form class="my__form" action="">
-      <input class="my__input" type="text" placeholder="ваше імя...">
-      <input class="my__input" type="text" placeholder="ваш мобільний...">
-      <div class="form__buttons">
-        <button class="my__form-button">Доставка</button>
-        <button class="my__form-button">Самовивіз</button>
-      </div>
-  </form>
+  <app-form></app-form>
 </div>
 <div class="empty" *ngIf="(items$ | async)!.length === 0">
   <img class="empty__img" src="assets/icons/basket.svg" alt="basket">
