--- a/src/app/components/my-basket/my-basket.component.html
+++ b/src/app/components/my-basket/my-basket.component.html
@@ -20,6 +20,7 @@
         <button class="my__button" (click)="handlerPlusElement(pizza)">+</button>
       </div>
     </div>
+    <app-remove-menu [pizza]="pizza" *ngIf="(items$ | async)!.length > 0 && pizza.isRemoved"></app-remove-menu>
   </div>
   <div class="my__sum">
     <p class="my__sum-title">Сума замовлення:</p>
